--- a/package.json
+++ b/package.json
@@ -10,5 +10,12 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
+        "@vitejs/plugin-react": "^3.0.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
